Money Manager 25.5.1
* Еще один парсер CSV выписок от RBRU